# olox

./: .gitignore  .ocamlformat  LICENSE  README.md  ast.ml  dune  environ.ml  environ.mli  interpreter.ml  olox.ml  olox.opam  parser.ml  reporting.ml  scanner.ml  token.ml  value.ml
olox/: ast.ml  ast.mli  dune  environ.ml  environ.mli  interpreter.ml  interpreter.mli  parser.ml  parser.mli  reporting.ml  reporting.mli  scanner.ml  scanner.mli  token.ml  token.mli
test/: dune  test_interpreter.ml  test_parser.ml  test_scanner.ml
test/integration/assignment.t/: global.lox  infix_operator.lox  run.t
test/integration/block.t/: run.t
test/integration/bool.t/: equality.lox  not.lox  run.t
test/integration/call.t/: bool.lox  nil.lox  object.lox  run.t
test/integration/class.t/: inherited_method.lox  local_inherit_other.lox  run.t
