opam-version: "2.0"
name: "olox"
version: "~dev"
synopsis: "Ocaml port of the lox language from 'Crafting Intepreters'"
maintainer: "Lucas Sacherer <lucas.sacherer@gmail.com>"
authors: "Lucas Sacherer <lucas.sacherer@gmail.com>"
license: "MIT"
homepage: "https://github.com/LucasSacherer/olox"
bug-reports: "https://github.com/LucasSacherer/olox/issues"
dev-repo: "git+https://github.com/LucasSacherer/olox.git"
depends: [
  "ocaml"  {>= "4.9"}
  "dune"   {>= "2.7"}
  "ounit2" {>= "2.2"}
]
build: ["dune" "build" "-p" name "-j" jobs]
